@@ -1,3 +1,10 @@
+2007-05-13  Ulrich Drepper  <drepper@redhat.com>
+
+	* malloc/malloc.c [MALLOC_DEBUG]: Keep track of current maximum
+	number of mmaps.  n_mmaps_max is the target.
+	* malloc/hooks.c: Likewise.
+	* malloc/arena.c: Likewise.
+
 2007-05-12  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/unix/sysv/linux/tst-getcpu.c: Include <unistd.h> for
